Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-58400

When printing a large page (or a very detailed one) then their can be a lot of images being passed to the printer, which can cause out of memory problems

XMLWordPrintable

      When printing a large page (or a very detailed one) then their can be a lot of images being passed to the printer, which can cause out of memory problems. As the images will be stored and copied one by one then it can easily run out of memory when printing to either a QPrinter or PDF. It would be good if it is possible to only have the one image passed from the PDFium wrapper to QPrinter at a time to avoid potential memory concerns.

        1. report.html.zip
          393 kB
          Andy Shaw
        For Gerrit Dashboard: QTBUG-58400
        # Subject Branch Project Status CR V

            mibrunin Michael Bruning
            andysh Andy Shaw
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes